# swebash

./: .env.example  .gitignore  .swebashrc.example  ARROW_KEYS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  E2E_TESTING_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASES_7-12_SUMMARY.md  README.md  SECURITY.md  SUPPORT.md  TESTING_SUMMARY.md  bootstrap.ps1  bootstrap.sh  deny.toml  sbh  sbh.cmd  sbh.ps1  test_arrow_keys.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ai/: CONFIGURATION.md  Cargo.toml  TOOL_CALLING_ARCHITECTURE_REVISED.md  TOOL_CALLING_DESIGN.md  TOOL_CALLING_FLOW.md  TOOL_CALLING_SEA_CORRECT.md
ai/docs/: TOOL_MIGRATION_DESIGN.md
ai/src/: config.rs  lib.rs
ai/src/api/: error.rs  mod.rs  types.rs
ai/src/core/: chat.rs  complete.rs  explain.rs  history.rs  mod.rs  prompt.rs  translate.rs
ai/src/core/agents/: builtins.rs  default_agents.yaml  mod.rs
ai/src/core/tools/: exec.rs  fs.rs  mod.rs  web.rs
ai/src/spi/: chat_provider.rs  llm_provider.rs  mod.rs  tool_aware_engine.rs
ai/tests/: integration.rs  tools_test.rs
docs/: HISTORY_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PHASES_7-12_IMPLEMENTATION.md  README.md  RUSTYLINE_BACKLOG_SUMMARY.md  ai-mode-tests.md  ai-mode.md  backlog.md  changelog.md  command-design.md  configuration.md  glossary.md  manual-testing.md  prompt-engineering.md  rustyline-enhancements.md
docs/0-ideation/: README.md
docs/1-requirements/: README.md  srs.md
docs/2-planning/: README.md
docs/3-design/: ADR-001-agent-doc-context.md  agent-architecture.md  agent_architecture.md  ai-integration.md  ai_integration.md  architecture.md  command-design.md  command_design.md  prompt-engineering.md  prompt_engineering.md  rag_architecture.md  test_framework_architecture.md  wasmtime_caching.md  workspace_sandbox.md
docs/4-development/: ai-mode.md  ai_mode.md  arrow-keys.md  arrow_keys.md  backlog.md  case_study_backlog.md  developer-guide.md  developer_guide.md  history-feature.md  history_feature.md  readline-enhancements.md  readline-phases.md  readline_enhancements.md  readline_phases.md  setup-guide.md  setup_guide.md
docs/4-testing/: manual_testing.md
docs/5-testing/: ai-mode-tests.md  ai_mode_tests.md  ai_test_report_2026-02-10.md  ai_test_report_2026-02-20.md  e2e-testing.md  e2e_testing.md  manual-testing.md  manual_ai_tests.md  manual_git_gates_tests.md  manual_rag_tests.md  manual_sbh_tests.md  manual_shell_tests.md  manual_tab_tests.md  manual_test_report_2026-02-20.md  manual_testing.md  rag_test_report_2026-02-10.md  rag_test_report_2026-02-20.md  strategy.md  tab_test_report_2026-02-10.md  testing_strategy.md
docs/6-deployment/: README.md
docs/6-operation/: configuration.md  creating-agents.md  installation.md
docs/7-operation/: awscli_agent.md  configuration.md  creating_agents.md  installation.md
docs/7-operations/: configuration.md  installation.md
engine/: Cargo.toml
engine/src/: buffer.rs  dispatch.rs  host.rs  lib.rs  parser.rs
features/ai/: Cargo.toml  TOOL_CALLING_DESIGN.md  TOOL_CALLING_PROVIDER_PATTERN.md  TOOL_CALLING_SEA_CORRECT.md
features/ai/docs/: TOOL_MIGRATION_DESIGN.md
features/ai/src/: lib.rs
features/ai/src/api/: cli.rs  commands.rs  error.rs  mod.rs  output.rs  types.rs
features/ai/src/core/: chat.rs  mod.rs  prompt.rs  translate.rs
features/ai/src/core/agents/: builtins.rs  config.rs  default_agents.yaml  mod.rs
features/ai/src/core/rag/: chunker.rs  embeddings.rs  index.rs  mod.rs  service.rs  stores.rs  tool.rs
features/ai/src/core/tools/: cached.rs  mod.rs  sandboxed.rs
features/ai/src/core/tools/devops/: download.rs  error.rs  mod.rs  package_manager.rs
features/ai/src/core/tools/web/: mod.rs
features/ai/src/spi/: chat_provider.rs  config.rs  logging.rs  mod.rs  rag.rs
features/ai/tests/: integration.rs
features/autotest/: Cargo.toml
features/autotest/src/: driver.rs  executor.rs  lib.rs  main.rs  report.rs  spec.rs  validation.rs
features/llm/: Cargo.toml  TOOL_CALLING_ARCHITECTURE_REVISED.md  TOOL_CALLING_FLOW.md
features/llm/agents/: default.yaml
features/llm/docs/: TOOL_MIGRATION_DESIGN.md
features/llm/src/: lib.rs
features/llm/src/api/: cli.rs  commands.rs  mod.rs
features/llm/src/core/: chat.rs  complete.rs  explain.rs  mod.rs  translate.rs
features/llm/src/core/agents/: builtins.rs  config.rs  default_agents.yaml
features/llm/src/core/rag/: normalize.rs  tool.rs
features/llm/src/core/tools/: cached.rs  error.rs  mod.rs  sandboxed.rs
features/llm/src/core/tools/devops/: download.rs  error.rs  mod.rs  package_manager.rs
features/llm/src/core/tools/web/: error.rs
features/llm/src/spi/: chat_provider.rs  config.rs  gateway_client.rs  logging.rs  mock_client.rs  mod.rs  rag.rs
features/llm/tests/: integration.rs  swebash_llm_int_test.rs  swebash_llm_security_test.rs
features/shell/host/: Cargo.toml  build.rs
features/shell/host/src/: main.rs
features/shell/host/src/spi/: config.rs  git_config.rs  git_gates.rs  mod.rs  path.rs  runtime.rs  sandbox.rs  setup.rs  state.rs  tab.rs  tab_bar.rs
features/shell/host/src/spi/imports/: env.rs  fs.rs  io.rs  mod.rs  process.rs  workspace.rs
features/shell/host/tests/: integration.rs  readline_tests.rs  swebash_int_test.rs  swebash_security_test.rs
features/test/: Cargo.toml  LICENSE
features/test/src/: assert.rs  contract.rs  error.rs  fixture.rs  lib.rs  mock.rs  naming.rs  observe.rs  retry.rs  security.rs  stream.rs
host/: Cargo.toml
host/src/: history.rs  main.rs  runtime.rs  state.rs
host/tests/: integration.rs  readline_tests.rs
lib/: common.ps1  common.sh
scripts/: convert_manual_tests.py
scripts/ci/: build.sh  lint.sh  test.sh
scripts/dev/: agent_client.py  clean.sh  setup.sh
scripts/release/: bump-version.sh  publish.sh
swe-readline/: Cargo.toml
swe-readline/src/: lib.rs
swe-readline/tests/: swe_readline_int_test.rs  swe_readline_security_test.rs
tests/suites/: ai_features.yaml  devops_agent.yaml  shell_basics.yaml
(+73 files in other folders)
