[workspace]
members = [
  "swe-readline",
  "features/shell/engine",
  "features/shell/host",
  "features/shell/readline",
  "features/ai",
  "features/test",
]
default-members = ["features/shell/host"]
resolver = "2"

[workspace.dependencies]
swe-readline = { path = "swe-readline" }

[profile.release]
opt-level = "s"
lto = true
strip = true

# Patch llm-provider from the local registry with our vendored version that
# adds the `oauth` feature while preserving API compatibility with `react`.
[patch."file:///mnt/c/Users/elvis/.cargo/registry.local/index"]
llm-provider = { path = "vendor/llm-provider" }
