[workspace]
members = [
  "swe-readline",
  "features/shell/engine",
  "features/shell/host",
  "features/shell/readline",
  "features/llm",
  "features/test",
  "features/autotest",
]
default-members = ["features/shell/host"]
resolver = "2"

[workspace.dependencies]
swe-readline = { path = "swe-readline" }

[profile.release]
opt-level = "s"
lto = true
strip = true

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Patch llm-provider from the local registry with our vendored version that
# adds the `oauth` feature while preserving API compatibility with `react`.
[patch."file:///C:/Users/elvis/.cargo/registry.local/index"]
llm-provider = { path = "vendor/llm-provider" }

# Redirect the optional `client-rust` dep in llmrag-core (rag-swevecdb feature)
# to the local SweVecDB workspace instead of crates.io (where it is not published).
[patch.crates-io]
client-rust = { path = "../swevecdb/swevecdb/client/client-rust" }
