[package]
name = "swebash-ai"
version = "0.1.0"
edition = "2021"
description = "AI/LLM integration for swebash shell (SEA pattern)"

[dependencies]
# Chat engine (from rustratify) — provides SimpleChatEngine with memory management
chat-engine = { package = "chat", path = "../../rustratify/ai/llm/agent/chat" }

# LLM provider (from rustratify) — used for CompletionBuilder and service creation
llm-provider = { path = "../../rustratify/ai/llm/provider" }

# React (from rustratify) — provides AgentEventSender for chat engine
react = { path = "../../rustratify/ai/llm/agent/react" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Tool calling support
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
url = "2.5"

# Agent controller (from rustratify) — provides EngineState and Engine trait
agent-controller = { path = "../../rustratify/ai/llm/agent/controller" }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
llm-provider = { path = "../../rustratify/ai/llm/provider" }
serial_test = "3"
