[package]
name = "swebash-ai"
version = "0.1.0"
edition = "2021"
description = "AI/LLM integration for swebash shell (SEA pattern)"

[dependencies]
# Chat engine (from rustratify) — provides SimpleChatEngine with memory management
chat-engine = { package = "chat", version = "0.1.0", registry = "local" }

# LLM provider (from rustratify) — used for CompletionBuilder and service creation
llm-provider = { version = "0.1.0", registry = "local" }

# React (from rustratify) — provides AgentEventSender for chat engine
react = { version = "0.1.0", registry = "local" }

# Tool support (from rustratify) — provides Tool trait, ToolRegistry, and standard providers
tool = { version = "0.1.0", registry = "local", features = ["providers"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Utility crates still needed
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"

# Agent controller (from rustratify) — provides EngineState and Engine trait
agent-controller = { version = "0.1.0", registry = "local" }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
llm-provider = { version = "0.1.0", registry = "local" }
serial_test = "3"
