[package]
name = "swebash-ai"
version = "0.1.0"
edition = "2021"
description = "AI/LLM integration for swebash shell (SEA pattern)"

[features]
default = ["rag-local"]
rag-local = ["fastembed"]       # Local ONNX embedding (no API key needed)
rag-sqlite = ["rusqlite"]       # Persistent SQLite vector store
rag-swevecdb = ["client-rust"]  # Remote SweVecDB vector store

[dependencies]
# Chat engine (from rustratify) — provides SimpleChatEngine with memory management
chat-engine = { package = "chat", version = "0.1.0", registry = "local" }

# LLM provider (from rustratify) — used for CompletionBuilder and service creation
llm-provider = { version = "0.1.0", registry = "local" }

# React (from rustratify) — provides AgentEventSender for chat engine
react = { version = "0.1.0", registry = "local" }

# Tool support (from rustratify) — provides Tool trait, ToolRegistry, and standard providers
tool = { version = "0.1.0", registry = "local", features = ["providers"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# File glob expansion for docs loading
glob = "0.3"

# Utility crates still needed
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"

# Agent controller (from rustratify) — provides EngineState and Engine trait
agent-controller = { version = "0.1.0", registry = "local" }

# Agent cache (from rustratify) — tool result caching for ReadOnly tools
agent-cache = { version = "0.1.0", registry = "local" }

# RAG: text chunking with sentence boundary detection
unicode-segmentation = "1.11"

# RAG: file fingerprinting for staleness detection
sha2 = "0.10"

# RAG: local ONNX embedding (optional, default feature)
fastembed = { version = "4", optional = true }

# RAG: persistent SQLite vector store (optional)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# RAG: SweVecDB remote vector store (optional)
client-rust = { path = "../../../swevecdb/swevecdb/client/client-rust", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"
agent-controller = { version = "0.1.0", registry = "local", features = ["testing"] }
llm-provider = { version = "0.1.0", registry = "local", features = ["testing"] }
serial_test = "3"
tempfile = "3"
swebash-test = { path = "../test" }
