[package]
name = "swebash-autotest"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
description = "Automated interactive test runner for swebash"

[[bin]]
name = "swebash-autotest"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[dev-dependencies]
swebash-test = { path = "../test" }
