[package]
name = "swebash-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
description = "LLM integration for swebash shell (SEA pattern)"

[features]
default = ["rag-local"]
rag-local = ["llmrag/rag-local"]       # Local ONNX embedding (no API key needed)
rag-sqlite = ["llmrag/rag-sqlite"]     # Persistent SQLite vector store
rag-swevecdb = ["llmrag/rag-swevecdb"] # Remote SweVecDB vector store

[dependencies]
# ============================================================================
# llmboot - L1 Gateway API (the only LLM integration)
# ============================================================================
# All LLM functionality is accessed through llmboot's gateway and orchestration layers.
# This replaces all legacy rustratify dependencies.
llmboot-input = { workspace = true }
llmboot-providers = { workspace = true }
llmboot-tools = { workspace = true }
llmboot-orchestration = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["sync", "rt", "time", "macros", "process", "fs", "io-util"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# File glob expansion for docs loading
glob = "0.3"

# Utility crates still needed
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
dirs = "5"

# RAG — provides RAG pipeline (chunking, vector storage, index management)
# Note: Uses llmboot's rag module re-exported from llmboot-orchestration
llmrag = { version = "0.1.0", registry = "local", default-features = false }

# SHA-256 fingerprinting for PreprocessingRagIndexService
sha2 = "0.10"

# HTTP client for download tool
reqwest = { version = "0.12", features = ["stream"] }
url = "2.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures = "0.3"
serial_test = "3"
tempfile = "3"
filetime = "0.2"
swebash-test = { path = "../test" }
