[package]
name = "swebash"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[features]
default = ["rag-local"]
rag-local = ["swebash-llm/rag-local"]
rag-sqlite = ["swebash-llm/rag-sqlite"]
rag-swevecdb = ["swebash-llm/rag-swevecdb"]

[dependencies]
wasmtime = "29"
anyhow = "1"
dirs = "5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
swebash-llm = { path = "../../llm", default-features = false }
swebash-readline = { path = "../readline" }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.29"
